// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoLsD gGqzKs"
>
  <li
    className="sc-AxmLO dTCXFM"
  >
    <span
      className="sc-AxhUy kJweiF"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-AxmLO dTCXFM"
  >
    <span
      className="sc-AxhUy kJweiF"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-AxmLO dTCXFM"
  >
    <span
      className="sc-AxhUy kJweiF"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoLsD gGqzKs"
>
  <li
    className="sc-AxmLO sc-fzozJi bGGJjm"
  >
    <span
      className="sc-AxhUy kJweiF"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-AxmLO sc-fzozJi bGGJjm"
  >
    <span
      className="sc-AxhUy kJweiF"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-AxmLO sc-fzozJi bGGJjm"
  >
    <span
      className="sc-AxhUy kJweiF"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
